# AoC24

./: .gitignore  README.md
Dec1/: task1.py  task2.py
Dec10/: task1.py  task2.py
Dec11/: task1.py  task2.py
Dec12/: task1.py  task2.py
Dec13/: task1.py  task2.py
Dec14/: task1.py  task2.py
Dec15/: task1.py  task2.py
Dec16/: task1.py  task2.py
Dec18/: task1.py  task2.py
Dec19/: task1.py  task2.py
Dec2/: task1.py  task2.py
Dec20/: task1.py  task2.py
Dec3/: task1.py  task2.py
Dec4/: task1.py  task2.py
Dec5/: task1.py  task2.py
Dec6/: task1.py  task2.py
Dec7/: task1.py  task2.py
Dec8/: task1.py  task2.py
Dec9/: task1.py  task2.py
haskell/: aoc24.cabal  day.sh  new_day.sh
haskell/solutions/: Day01.hs  Day02.hs  Day03.hs
haskell/src/: Common.hs
julia/: Manifest.toml  template.jl  utils.jl
julia/dec1/: dec1.jl
julia/dec2/: dec2.jl
