cabal-version:   3.0
name:            aoc24
version:         0.1.0.0
license:         NONE
author:          Jacob Siegumfeldt
maintainer:      jacobi7th@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
  hs-source-dirs: src
  exposed-modules: Common
  default-language: Haskell2010
  build-depends: 
      base
    , text

executable day01
    import:           warnings
    main-is:          Day01.hs
    hs-source-dirs:   solutions
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    build-depends:    
        base ^>=4.18.3.0
        , aoc24
        , text
        , vector
        , linear
        , split
        , containers
        , mtl
